# vldb-sqlite

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  vldb-sqlite.json
.github/workflows/: build-native-release.yml  docker-build.yml
docker/: vldb-sqlite.json
docs/: LIBRARY_USAGE.zh-CN.md  README.en.md  README.zh-CN.md  fix-plan.md  grpc-integration.en.md  grpc-integration.zh-CN.md
examples/go-ffi/: README.md  go.mod  main.go
examples/go-ffi/sqliteffi/: loader_unix.go  loader_windows.go  sqliteffi.go
include/: vldb_sqlite.h
proto/v1/: sqlite.proto
src/: config.rs  db_lock.rs  ffi.rs  fts.rs  lib.rs  library.rs  logging.rs  main.rs  runtime.rs  service.rs  sql_exec.rs  tokenizer.rs
