[package]
name = "vldb-sqlite"
version = "0.1.5"
edition = "2024"
rust-version = "1.94"
build = "build.rs"
description = "A Rust gRPC, library, and FFI gateway for SQLite with JSON and Arrow IPC query paths."
license = "MIT"
repository = "https://github.com/OpenVulcan/vldb-sqlite"
homepage = "https://github.com/OpenVulcan/vldb-sqlite"
documentation = "https://docs.rs/vldb-sqlite"
readme = "README.md"
keywords = ["sqlite", "grpc", "ffi", "arrow", "vldb"]
categories = ["database", "network-programming"]
include = [
    "/Cargo.toml",
    "/Cargo.lock",
    "/LICENSE",
    "/README.md",
    "/build.rs",
    "/src/**",
    "/proto/**",
    "/include/**",
    "/docs/README.en.md",
    "/docs/README.zh-CN.md",
    "/docs/LIBRARY_USAGE.zh-CN.md",
    "/docs/grpc-integration.en.md",
    "/docs/grpc-integration.zh-CN.md",
    "/vldb-sqlite.json.example",
]

[lib]
name = "vldb_sqlite"
crate-type = ["rlib", "cdylib"]

[dependencies]
arrow = { version = "58.1.0", default-features = false, features = ["ipc"] }
base64 = "0.22.1"
bytes = "1.11.1"
chrono = { version = "0.4.42", default-features = false, features = ["clock", "std"] }
fs4 = "0.13.1"
jieba-rs = "0.9.0"
prost = "0.14.3"
rusqlite = { version = "0.39.0", features = ["bundled", "column_decltype", "pointer"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "signal", "sync", "time"] }
tokio-stream = "0.1.18"
tonic = { version = "0.14.5", features = ["transport"] }
tonic-prost = "0.14.5"

[build-dependencies]
protoc-bin-vendored = "3.2.0"
tonic-prost-build = "0.14.5"

[profile.release]
strip = true
lto = true
codegen-units = 1
